--- a/www/general/login.html
+++ b/www/general/login.html
@@ -28,7 +28,7 @@
     }
     #bypass a{
         text-decoration: none;
-        color: green;
+        color: blue;
     }
     #bypass a:hover{
         color: yellowgreen;
@@ -79,7 +79,7 @@
     <button type="button" name="button" id="continue">Continue</button>
     <br/>
     <br/>
-    <p id="bypas"><a href="forgot.php">Forgot Password?</a></p>
+    <p id="bypas"><a href="forgot.html">Forgot Password?</a></p>
     <p style='color:black'>Your Information is protected with industry-standard encryption. Do not share your credentials with anyone.</p>
 
     <p id="bypass">Dont have and Account yet, Click here to <a href="signup.html">Sign Up</a></p>
