--- a/www/general/signup.html
+++ b/www/general/signup.html
@@ -34,7 +34,7 @@
     }
     #bypass a{
         text-decoration: none;
-        color: green;
+        color: blue;
     }
     #bypass a:hover{
         color: yellowgreen;
