--- a/www/general/dashboard.html
+++ b/www/general/dashboard.html
@@ -67,6 +67,7 @@
         background-size: cover;
         white-space: nowrap;
         position: relative;
+        transition: opacity 0.5s ease-in-out;
     }
     
     #justify{
@@ -101,7 +102,7 @@
         margin-top: 3px;
     }
     .bod{
-        border: 1px solid green;
+        /* border: 1px solid green; */
         width: 100%;
         /* height: 59.5vh;
         background-color: aquamarine; */
@@ -110,7 +111,7 @@
 
     .thumbnails{
         border: 1px solid red;
-        width: 24.49%;
+        width: 24.6%;
         height: 40vh;
     }
 
