--- a/www/general/dashboard.html
+++ b/www/general/dashboard.html
@@ -67,6 +67,7 @@
         background-size: cover;
         white-space: nowrap;
         position: relative;
+        background-size: cover;
         transition: opacity 0.5s ease-in-out;
     }
     
@@ -107,6 +108,9 @@
         /* height: 59.5vh;
         background-color: aquamarine; */
         align-content: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        
     }
 
     .thumbnails{
@@ -140,14 +144,14 @@
         <p id="dash2">Lungu Hills &nbsp;&nbsp;* &nbsp;&nbsp;Lungu Hills &nbsp;&nbsp; * Lungu Hills &nbsp;&nbsp;* &nbsp;&nbsp;Lungu Hills</p>
     </div>
     <div id="space"></div>
-    <div id="first-image" style="background-image:url(../images/1.jpg);">
+    <div id="first-image" style="background-image:url(../images/1.png);">
     </div>
     <div class="bod">
             <div>
-                <img class="thumbnails" src="../images/5.jpg" onclick="loadImage(this)" alt="">
-                <img class="thumbnails" src="../images/2.jpg" onclick="loadImage(this)" alt="">
-                <img class="thumbnails" src="../images/3.jpg" onclick="loadImage(this)" alt="">
-                <img class="thumbnails" src="../images/4.jpg" onclick="loadImage(this)" alt="">
+                <img class="thumbnails" src="../images/5.png" onclick="loadImage(this)" alt="">
+                <img class="thumbnails" src="../images/2.png" onclick="loadImage(this)" alt="">
+                <img class="thumbnails" src="../images/3.png" onclick="loadImage(this)" alt="">
+                <img class="thumbnails" src="../images/4.png" onclick="loadImage(this)" alt="">
             </div>
     </div>
 
