--- a/www/general/dashboard.html
+++ b/www/general/dashboard.html
@@ -65,9 +65,9 @@
         width: 100%;
         height: 450px;
         background-size: cover;
+        background-repeat: no-repeat;
         white-space: nowrap;
         position: relative;
-        background-size: cover;
         transition: opacity 0.5s ease-in-out;
     }
     
@@ -114,8 +114,7 @@
     }
 
     .thumbnails{
-        border: 1px solid red;
-        width: 24.6%;
+        width: 24.77%;
         height: 40vh;
     }
 
