--- a/www/general/user_statement.html
+++ b/www/general/user_statement.html
@@ -113,7 +113,7 @@
     <div id="header">
         <ul id="panel">
             <li id=""><a href="dashboard.html">Home</a></li>
-            <li id=""><a href="transfer.html">Transfer</a></li>
+            <li id=""><a href="dashboard.html">Transfer</a></li>
             <li id=""><a href="user_statement.html">Account Statement</a></li>
             <li><a href="#" id="logout">Logout</a></li>
         </ul>
