--- a/www/general/transfer.html
+++ b/www/general/transfer.html
@@ -169,6 +169,11 @@
         </div>
         <br/>
         <div id="grey">
+        <p id="recipient">Pin</p>
+        <input type="password" name="pin" id="pin" placeholder="****"/>
+        </div>
+        <br/>
+        <div id="grey">
         <p id="recipient">Remark</p>
         <textarea name="remark" placeholder="What's this for?(Optional)"></textarea>
         </div>
